--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,8 @@
 }
 
 .modalDialog > div {
-	width: 400px;
+	height: 500px;
+  width: 600px;
 	position: relative;
 	margin: 10% auto;
 	padding: 5px 20px 13px 20px;
